--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
   "type": "module",
   "scripts": {
     "build": "rsbuild build",
-    "dev": "rsbuild dev --open",
+    "dev": "node scripts/dev.js",
     "preview": "rsbuild preview"
   },
   "dependencies": {
+    "lodash-es": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@rsbuild/core": "^1.5.6",
-    "@rsbuild/plugin-react": "^1.4.0"
+    "@rsbuild/plugin-react": "^1.4.0",
+    "@types/lodash-es": "^4.17.12"
   }
 }
